--- a/app/src/main/res/layout/activity_verif.xml
+++ b/app/src/main/res/layout/activity_verif.xml
@@ -56,13 +56,14 @@
 
     <ImageView
         android:id="@+id/verify_password"
-        android:layout_width="280dp"
-        android:layout_height="280dp"
-        android:src="@drawable/forgot"
-        android:layout_marginTop="60dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearVerifyPassword"/>
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:src="@drawable/forgot_password_icon"
+        app:layout_constraintLeft_toLeftOf="@id/verify_password_icon"
+        app:layout_constraintRight_toRightOf="@id/verify_password_icon"
+        app:layout_constraintTop_toTopOf="@id/verify_password_icon"
+        app:layout_constraintBottom_toBottomOf="@id/verify_password_icon"
+        />
 
     <TextView
         android:id="@+id/verifypasswordTextView"
