--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,12 @@
     <color name="pink_500">#D81B60</color>
     <color name="pink_200">#FF8FAF</color>
     <color name="ijo">#227D3F</color>
-    <color name="ijo_muda">#3bbf3b</color>
+    <color name="ijo_muda">#A383FF83</color>
+    <color name="clock">#2E892E</color>
     <color name="grey">#787C78</color>
     <color name="back_ground">#eaeaea</color>
+    <color name="main_background">#E0F7FA</color>
+    <color name="top_bar">#50BECC</color>
     <color name="divider_color">#E0E0E0</color>
 
     //onboarding colors
