--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -15,5 +15,9 @@
         <item name="android:padding">10dp</item>
     </style>
 
+    <style name="image_border">
+        <item name="strokeColor">@color/black</item>
+    </style>
+
 
 </resources>
