--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -7,25 +7,21 @@
     android:background="@color/main_background"
     tools:context=".view.main.ui.profil.ProfilFragment">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/ivprofil"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="30dp"
-        android:elevation="4dp"
-        android:src="@drawable/image_profile"
-        app:civ_border_color="@color/navy"
-        app:civ_border_width="2dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintDimensionRatio="18:6"
+        android:src="@drawable/user"/>
 
     <TextView
         android:id="@+id/tvuser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Aji Sakti"
+        android:text="Jack Sparrow"
         android:textColor="@color/navy"
         android:textSize="24sp"
         android:textStyle="bold"
