--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -54,6 +54,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/linearNewPassword"/>
 
+    <ImageView
+        android:id="@+id/verify_password"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:src="@drawable/newpass"
+        app:layout_constraintLeft_toLeftOf="@id/new_password_icon"
+        app:layout_constraintRight_toRightOf="@id/new_password_icon"
+        app:layout_constraintTop_toTopOf="@id/new_password_icon"
+        app:layout_constraintBottom_toBottomOf="@id/new_password_icon"/>
+
     <TextView
         android:id="@+id/newPasswordTextView"
         android:layout_width="match_parent"
