--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -57,9 +57,9 @@
 
     <ImageView
         android:id="@+id/forgot_password"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:src="@drawable/forgot_password_icon"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@drawable/lock"
         app:layout_constraintBottom_toBottomOf="@id/forgot_password_icon"
         app:layout_constraintLeft_toLeftOf="@id/forgot_password_icon"
         app:layout_constraintRight_toRightOf="@id/forgot_password_icon"
